still trying to fix spacing

--- a/src/signup.css
+++ b/src/signup.css
@@ -62,7 +62,7 @@
   border-color: #500f49;
   padding: 60px;
   opacity:1;
-  max-height: 500px;
+  max-height: 550px;
   bottom: 0;
 }
 
